; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_windows_unicode_filenames.c_flac_internal_unlink_utf8.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_windows_unicode_filenames.c_flac_internal_unlink_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@utf8_filenames = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @flac_internal_unlink_utf8(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i32, i32* @utf8_filenames, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @_unlink(i8* %9)
  store i32 %10, i32* %2, align 4
  br label %22

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call i32* @wchar_from_utf8(i8* %12)
  store i32* %13, i32** %4, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %11
  store i32 -1, i32* %2, align 4
  br label %22

16:                                               ; preds = %11
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @_wunlink(i32* %17)
  store i32 %18, i32* %5, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @free(i32* %19)
  %21 = load i32, i32* %5, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %16, %15, %8
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @_unlink(i8*) #1

declare dso_local i32* @wchar_from_utf8(i8*) #1

declare dso_local i32 @_wunlink(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
